[package]
name = "fire-auth-token"
version = "0.1.2"
edition = "2021"
authors = ["Ajay Kumar <iajkumar1205@gmail.com>"]
description = "Firebase Auth Token Verification Crate"
license = "MIT"
repository = "https://github.com/ajkumar1205/fire-auth-token"
documentation = "https://docs.rs/fire-auth-tokenate"
homepage = "https://github.com/ajkumar1205/fire-auth-token"
keywords = ["firebase", "jwt", "auth", "token"]
categories = ["development-tools"]

[dependencies]
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros"] }
